Fixed spacing of h4 titles.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,6 +83,9 @@ h3 {
 	text-shadow: 0 2px 0 #999,
 				 0 0 12px #aaa;
 }
+h4: {
+	margin: 4px 0 2px;
+}
 
 h1 {
 	font-size: 3.25rem;
